Aurora v4: Hyper Boost path for MC 1.21+ on Java 21
- New getHyperProfile(tier) used when MC version >= 1.21:
  * HIGH tier: Generational ZGC + ZUncommitDelay tuning (sub-ms GC
    pauses, fixes combat / chunk-load stutter on capable hardware).
  * MID / LOW tier: tightly-tuned G1 (4ms / 10ms target pauses) since
    ZGC needs too much heap on 2-3GB devices.
  * Aggressive JIT inlining shared by all tiers
    (MaxInlineLevel=15, FreqInlineSize=325, LoopUnrollLimit=200,
    InlineSmallCode=2000, code cache up to 384M).
  * Java 21 module flags: --add-modules=jdk.incubator.vector so
    Sodium-style mods can use SIMD intrinsics, plus
    --enable-native-access=ALL-UNNAMED to silence FFM warnings.
- getAdaptiveBoostProfile dispatches to the Hyper path for ver>=21
  before falling back to the legacy v3 (Ultra + tier overlay) path.